--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Work & Rest combines pomodoro techniques with flexible configuration, task categories and statistics,
+      thereby you will be productive, focused and healthy."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
